Fixed contributor login alignment

--- a/sass/large.scss
+++ b/sass/large.scss
@@ -27,6 +27,7 @@
 #branding { position: relative; }
 #logo { margin: 14px 0 0 0; float: left; }
 #searchForm {
+	text-align: left; 
 	position: absolute;
 	bottom: 0;
 	right: 0;
